--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "@aws-amplify/ui-react": "^6.11.2",
-    "aws-amplify": "^6.15.3",
+    "@aws-amplify/ui-react-storage": "^3.12.0",
+    "aws-amplify": "^6.15.4",
     "next": "^15.4.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
